<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_above="@+id/bottom">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/nameape"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@id/imagen"
                    android:layout_alignBottom="@id/imagen"
                    android:layout_toStartOf="@+id/imagen"
                    android:gravity="center"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/nombre"
                        android:inputType="text">

                    </EditText>

                    <EditText
                        android:id="@+id/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/apellidos"
                        android:inputType="text"></EditText>

                </LinearLayout>

                <ImageView
                    android:id="@+id/imagen"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:layout_alignParentEnd="true"
                    android:src="@drawable/captura"></ImageView>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/nameape"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/namehero"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombreheroe"
                    android:inputType="text"></EditText>

                <EditText
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/edad"
                    android:inputType="number"></EditText>

                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/direccion"
                    android:inputType="text"></EditText>

                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ciudad"
                    android:inputType="text"></EditText>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/registrar">
    </Button>

</RelativeLayout>